--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 .header{
     height: 100vh;
-    background-image: url('banneer1.jpg');
+    background-image: url("banner1.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
