--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@
 
 @media only screen and (max-width: 400px) {
     .navbar{
+        background:green;
         display: flex;
         flex-direction: column;
     }
